# yinjie-app

./: .dockerignore  .env.example  .gitignore  .npmrc  AGENTS.md  BP_OUTLINE - 副本.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  PROJECT_INTRO copy.md  README.md  build-windows-installer.bat  docker-compose.yml  package.json  pnpm-lock.yaml  restart-app.sh  restart.bat  start-dev.bat  start-web.sh  start.bat  stop.bat  tsconfig.base.json  turbo.json  隐界 (Yinjie)：AI 人“活人化”系统设计与技术架构.md  隐界 APP 商业计划书 · 讨论结论汇总.md  隐界—技术规格文档.md  隐界产品说明.md
admin/: package-lock.json  package.json
api/: .env.example  Dockerfile  inspect-db.js  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
config/: provider-defaults.json
crates/core-api/: Cargo.toml
crates/core-api/runtime-data/: yinjie.runtime.json
crates/core-api/src/: app_state.rs  auth_support.rs  error.rs  generation.rs  main.rs  models.rs  persistence.rs  realtime.rs  runtime_paths.rs  scheduler.rs  seed.rs
crates/core-api/src/evals/: mod.rs  routes.rs  storage.rs  types.rs
crates/core-api/src/routes/: mod.rs  system.rs
crates/core-api/src/routes/legacy/: auth.rs  characters.rs  chat.rs  config.rs  feed.rs  mod.rs  moderation.rs  moments.rs  social.rs  world.rs
crates/inference-gateway/: Cargo.toml
crates/inference-gateway/src/: lib.rs
docs/: AI架构设计.md  API接口文档.md  android-build.md  ios-app-store-metadata-draft.md  ios-app-store-submission.md  ios-build.md  ios-device-regression-checklist.md  ios-macos-runbook.md  ios-plugin-implementation-guide.md  ios-preflight-p0-p1.md  ios-review-notes-template.md  ios-test-account-template.md  ios-xcode-integration-checklist.md  product-lines.md  windows-acceptance-checklist.md  windows-build.md  前端组件文档.md  设计系统.md  (+5 more)
(+849 files in other folders)
