[package]
name = "yinjie-desktop"
version = "0.1.0"
description = "隐界桌面运行时"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
