[package]
name = "yinjie-desktop"
version = "0.1.0"
description = "隐界桌面运行时"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
window-vibrancy = "0.6"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2.2.5"
